--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 body {
+  margin: 0;
+  margin-top: 50px;
   background-color: powderblue;
+}
+
+.image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%
 }
