--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
 body {
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 50px;
-  background-color: powderblue;
+  width: 50%;
+  background-color: rgba(255, 255, 128, .5);
 }
 
 .image {
