--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 body {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
   width: 50%;
   background-color: rgba(255, 255, 128, .5);
 }
 
 .image {
+  border-radius: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
